app/assets/stylesheets/framework_and_overrides.css.scss
// import the CSS framework
@import "bootstrap-sprockets";
@import "bootstrap";
@import "bootstrap-variables";

// make all images responsive by default
img {
  @extend .img-responsive;
  margin: 0 auto;
  }
// override for the 'Home' navigation link
.navbar-brand {
  font-size: inherit;
  }

// THESE ARE EXAMPLES YOU CAN MODIFY
// create your own classes
// to make views framework-neutral
.column {
  @extend .col-md-6;
  @extend .text-center;
  }
.form {
  @extend .col-md-6;
  }
.form-centered {
  @extend .col-md-6;
  @extend .text-center;
  }
.submit {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-lg;
  }
// apply styles to HTML elements
// to make views framework-neutral
main {
  @extend .container;
  background-color: #eee;
  padding-bottom: 80px;
  width: 100%;
  margin-top: -20px; //51px; // accommodate the navbar
  }
section {
  @extend .row;
  margin-top: 20px;
  }

@media only screen
and (min-device-width: 320px)
and (min-device-width: 480px)
{
  h1, h2, h3 { font-size: smaller; }
}  

@media only screen
and (min-device-width: 320px)
and (min-device-width: 568px)
{
  h1, h2, h3 { font-size: smaller; }
}  

@media only screen
and (min-device-width: 375px)
and (min-device-width: 667px)
{
  h1, h2, h3 { font-size: smaller; }
}  

@media only screen
and (min-device-width: 414px)
and (min-device-width: 736px)
{
  h1, h2, h3 { font-size: smaller; }
}  

/* make sidebar nav vertical */ 
@media (min-width: 768px) {
  .sidebar-nav .navbar .navbar-collapse {
    padding: 0;
    max-height: none;
  }
  .sidebar-nav .navbar ul {
    float: none;
    display: block;
  }
  .sidebar-nav .navbar li {
    float: none;
    display: block;
    margin:0 5px 5px 0;
  }
  .sidebar-nav .navbar li.active {
    background-color: #ccc;
  }
  .sidebar-nav .navbar li a {
  }
  
  .span.badge {
    float: right;
    margin-right: 20px;
  }
  
}

.navbar-inverse { background-color: #FFFFFF}
.navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus { background-color: #FFFFFF}
.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus { background-color: #FFFFFF}
.dropdown-menu { background-color: #FFFFFF}
.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color: #428BCA}
.navbar-inverse { background-image: none; }
.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-image: none; }
.navbar-inverse { border-color: #FFFFFF}
.navbar-inverse .navbar-brand { color: #080F70}
.navbar-inverse .navbar-brand:hover { color: #3392FF}
.navbar-inverse .navbar-nav>li>a { color: #080F70}
.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus { color: #3392FF}
.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus { color: #080F70}
.navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus { color: #3392FF}
.dropdown-menu>li>a { color: #333333}
.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { color: #FFFFFF}
.navbar-inverse .navbar-nav>.dropdown>a .caret { border-top-color: #999999}
.navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-top-color: #FFFFFF}
.navbar-inverse .navbar-nav>.dropdown>a .caret { border-bottom-color: #999999}
.navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-bottom-color: #FFFFFF}

#search-list li:first-child .remove_fields:first-of-type {
  display: none;
}

#search-list li:last-child .add_fields:last-of-type {
  display: inline-block;
}

#search-list li:only-child .add_fields:last-of-type {
  display: inline-block;
}

